# GroupC

./: .coverage  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  pyproject2.toml
.github/workflows/: ci.yml
data/: sampleB.fastq.fxi
src/: metrics.py  read.py
src/fastq_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/qc_tools/: cli.py  html_report.py  metrics.py  read.py
test/: test_integration.py  test_intergration.py  test_metrics.py  test_read.py
tests/: test_fasta.py  test_metrics.py
