[project]
name="biol5472_tool"
version="0.1.0"
requires-python=">=3.11"
dependencies=["typer>=0.12","pandas>=2.2"]

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[project.scripts]
biol5472-tool="biol5472_tool.cli:app"

[tool.pytest.ini_options]
testpaths=["tests"]
addopts=["-q"]

[tool.mypy]
python_version="3.11"
disallow_untyped_defs=true
packages=["biol5472_tool"]