[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastq-tool"
version = "0.1.0"
description = "A robust FASTQ QC tool"
requires-python = ">=3.10"
dependencies = [
    "biopython",
]

[project.scripts]
# This allows you to run "fastq-tool" in the command line
# It points to: src/fastq_tool/main.py function called main
fastq-tool = "fastq_tool.main:main"

[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.package-data]
qc_tools = ["py.typed"]
