[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastq-tool"
version = "0.1.0"
description = "A robust FASTQ QC tool for biological data"
readme = "README.md"  # Links the documentation to the package
requires-python = ">=3.10"
license = 'Apache-2.0' 

keywords = ["bioinformatics", "fastq", "qc", "genomics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "biopython",
    "pyfastx",
]


# allows markers to run: pip install .[dev] to get all test tools at once
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "flake8",
    "mypy",
    "types-setuptools"
]

[project.scripts]
# updated -point  to 'cli.py' instead of old file name 'main.py'
fastq-tool = "qc_tools.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# tool config
#  can move pytest settings here instead of having a separate pytest.ini
[tool.pytest.ini_options]
addopts = "--cov=qc_tools --cov-report=term-missing"
testpaths = ["test"]

# coverage config
[tool.coverage.run]
branch = true
source = ["src/qc_tools"]

# mypy configuration
[tool.mypy]
files = "src"
strict = true
ignore_missing_imports = true